--- a/index.html
+++ b/index.html
@@ -113,6 +113,80 @@
                 <p>It is our best courses.If you want you can discover it.And improve your skills properly.</p>
             </div>
         </section>
+        <!-- more courses section start  -->
+        <section class=" container mt-5">
+            <div class="row gap-4 ">
+                <div class="d-flex align-items-center gap-4 col shadow p-3 mb-5 bg-body rounded">
+                    <div>
+                        <img src="Media File/images/course/course-1.png" alt="">
+                    </div>
+                    <div>
+                        <h2>Fundamental Of UI/UX Design</h2>
+                        <p>Some quick example text to build on the card title
+                            and make up the bulk of the card.</p>
+                        <h6 class="text-info fw-semibold">Price:20$</h6>
+                    </div>
+                </div>
+                <div class="d-flex align-items-center gap-4 col shadow p-3 mb-5 bg-body rounded">
+                    <div>
+                        <img src="Media File/images/course/course-2.png" alt="">
+                    </div>
+                    <div>
+                        <h2>Java script</h2>
+                        <p>Some quick example text to build on the card title
+                            and make up the bulk of the card.</p>
+                        <h6 class="text-info fw-semibold">Price:20$</h6>
+                    </div>
+                </div>
+                <div class="d-flex align-items-center gap-4 col shadow p-3 mb-5 bg-body rounded">
+                    <div>
+                        <img src="Media File/images/course/course-3.png" alt="">
+                    </div>
+                    <div>
+                        <h2>Full stack Web development</h2>
+                        <p>Some quick example text to build on the card title
+                            and make up the bulk of the card.</p>
+                        <h6 class="text-info fw-semibold">Price:20$</h6>
+                    </div>
+                </div>
+                <div class="d-flex align-items-center gap-4 col shadow p-3 mb-5 bg-body rounded">
+                    <div>
+                        <img src="Media File/images/course/course-4.png" alt="">
+                    </div>
+                    <div>
+                        <h2>Digital Marketing</h2>
+                        <p>Some quick example text to build on the card title
+                            and make up the bulk of the card.</p>
+                        <h6 class="text-info fw-semibold">Price:20$</h6>
+                    </div>
+                </div>
+                <div class="d-flex align-items-center gap-4 col shadow p-3 mb-5 bg-body rounded">
+                    <div>
+                        <img src="Media File/images/course/course-5.png" alt="">
+                    </div>
+                    <div>
+                        <h2>Photography Basic Rules</h2>
+                        <p>Some quick example text to build on the card title
+                            and make up the bulk of the card.</p>
+                        <h6 class="text-info fw-semibold">Price:20$</h6>
+                    </div>
+                </div>
+                <div class="d-flex align-items-center gap-4 col shadow p-3 mb-5 bg-body rounded">
+                    <div>
+                        <img src="Media File/images/course/course-6.png" alt="">
+                    </div>
+                    <div>
+                        <h2>Motion Graphics</h2>
+                        <p>Some quick example text to build on the card title
+                            and make up the bulk of the card.</p>
+                        <h6 class="text-info fw-semibold">Price:20$</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center ">
+                <button class="btn btn-primary">See more Courses</button>
+            </div>
+        </section>
     </main>
     <!-- main section end  -->
 
