--- a/index.html
+++ b/index.html
@@ -309,6 +309,20 @@
                 </div>
             </div>
         </section>
+        <!-- trusted section is start from here  -->
+        <section class="container mt-5 mb-5 .d-sm-none">
+            <div>
+                <h1 class="text-center">Trusted by over 800+ companies</h1>
+                <div class=" mt-3 d-flex gap-4 align-items-center">
+                    <img src="Media File/images/company/company-1.png" alt="">
+                    <img src="Media File/images/company/company-2.png" alt="">
+                    <img src="Media File/images/company/company-3.png" alt="">
+                    <img src="Media File/images/company/company-4.png" alt="">
+                    <img src="Media File/images/company/company-5.png" alt="">
+                    <img src="Media File/images/company/company-6.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
     <!-- main section end  -->
 
