--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;1,500&display=swap"
         rel="stylesheet">
+    <!-- iconfy link  -->
+    <script src="https://code.iconify.design/iconify-icon/1.0.0-beta.3/iconify-icon.min.js"></script>
     <!-- bootstrap link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -324,7 +326,33 @@
             </div>
         </section>
     </main>
+
     <!-- main section end  -->
+    <footer class="bg-dark">
+        <div class="d-flex justify-content-center align-items-center">
+            <div class="text-white w-25 text-center">
+                <h1>Courses</h1>
+                <p class="text-muted">Office 41, Zawaya Buildin, Ghala Muscat,
+
+                    Sultanate of Oman
+                    Privacy Ploicy | Terms of use.</p>
+                <div class="d-flex justify-content-center gap-3 fs-3">
+                    <p>
+                        <iconify-icon icon="cib:facebook"></iconify-icon>
+                    </p>
+                    <p>
+                        <iconify-icon icon="ant-design:twitter-circle-filled"></iconify-icon>
+                    </p>
+                    <p>
+                        <iconify-icon icon="entypo-social:linkedin-with-circle"></iconify-icon>
+                    </p>
+                    <p>
+                        <iconify-icon icon="bxl:tiktok"></iconify-icon>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
