--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;1,500&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;1,500&family=Poppins&display=swap"
         rel="stylesheet">
     <!-- iconfy link  -->
     <script src="https://code.iconify.design/iconify-icon/1.0.0-beta.3/iconify-icon.min.js"></script>
@@ -64,7 +64,7 @@
             <div class="carousel-inner">
                 <div class="carousel-item active rounded">
                     <img src="Media File/images/cover/cover-1.png" class="d-block w-100 " alt="...">
-                    <div class="carousel-caption d-md-block">
+                    <div class=" carousel-caption">
                         <h1>Get Started Digital
                             Learning</h1>
                         <p>We have to Digital learn because we live in 21 century.To keep rocking in this era we have to
@@ -74,7 +74,7 @@
                 </div>
                 <div class="carousel-item">
                     <img src="Media File/images/cover/cover-2.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-md-block">
+                    <div class="carousel-caption">
                         <h1>Get Started Digital
                             Learning</h1>
                         <p>We have to Digital learn because we live in 21 century.To keep rocking in this era we have to
@@ -84,7 +84,7 @@
                 </div>
                 <div class="carousel-item">
                     <img src="Media File/images/cover/cover-3.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-md-block">
+                    <div class="carousel-caption">
                         <h1>Get Started Digital
                             Learning</h1>
                         <p>We have to Digital learn because we live in 21 century.To keep rocking in this era we have to
@@ -109,7 +109,8 @@
     <!-- header file end  -->
     <!-- main section start  -->
     <main class="container mt-5">
-        <section class="w-25 m-auto">
+        <!-- popular courses  -->
+        <section class="w-50 m-auto">
             <div class="text-center">
                 <h2 class="fs-3 fw-bold">Discover our popular Courses</h2>
                 <p>It is our best courses.If you want you can discover it.And improve your skills properly.</p>
@@ -118,7 +119,8 @@
         <!-- more courses section start  -->
         <section class=" container mt-5">
             <div class="row gap-4 ">
-                <div class="d-flex align-items-center gap-4 col shadow p-3 mb-5 bg-body rounded">
+                <div
+                    class="d-flex flex-column flex-md-row text-center text-md-start align-items-center gap-4 shadow p-3 col bg-body rounded">
                     <div>
                         <img src="Media File/images/course/course-1.png" alt="">
                     </div>
@@ -129,7 +131,8 @@
                         <h6 class="text-info fw-semibold">Price:20$</h6>
                     </div>
                 </div>
-                <div class="d-flex align-items-center gap-4 col shadow p-3 mb-5 bg-body rounded">
+                <div
+                    class="d-flex flex-column flex-md-row text-center text-md-start align-items-center gap-4 col shadow p-3 bg-body rounded">
                     <div>
                         <img src="Media File/images/course/course-2.png" alt="">
                     </div>
@@ -140,7 +143,8 @@
                         <h6 class="text-info fw-semibold">Price:20$</h6>
                     </div>
                 </div>
-                <div class="d-flex align-items-center gap-4 col shadow p-3 mb-5 bg-body rounded">
+                <div
+                    class="d-flex flex-column flex-md-row text-center text-md-start align-items-center gap-4 col shadow p-3 bg-body rounded">
                     <div>
                         <img src="Media File/images/course/course-3.png" alt="">
                     </div>
@@ -151,7 +155,8 @@
                         <h6 class="text-info fw-semibold">Price:20$</h6>
                     </div>
                 </div>
-                <div class="d-flex align-items-center gap-4 col shadow p-3 mb-5 bg-body rounded">
+                <div
+                    class="d-flex flex-column flex-md-row text-center text-md-start align-items-center gap-4 col shadow p-3 bg-body rounded">
                     <div>
                         <img src="Media File/images/course/course-4.png" alt="">
                     </div>
@@ -162,7 +167,8 @@
                         <h6 class="text-info fw-semibold">Price:20$</h6>
                     </div>
                 </div>
-                <div class="d-flex align-items-center gap-4 col shadow p-3 mb-5 bg-body rounded">
+                <div
+                    class="d-flex flex-column flex-md-row text-center text-md-start align-items-center gap-4 col shadow p-3 bg-body rounded">
                     <div>
                         <img src="Media File/images/course/course-5.png" alt="">
                     </div>
@@ -173,7 +179,8 @@
                         <h6 class="text-info fw-semibold">Price:20$</h6>
                     </div>
                 </div>
-                <div class="d-flex align-items-center gap-4 col shadow p-3 mb-5 bg-body rounded">
+                <div
+                    class="d-flex flex-column flex-md-row text-center text-md-start align-items-center gap-4 col shadow p-3 bg-body rounded">
                     <div>
                         <img src="Media File/images/course/course-6.png" alt="">
                     </div>
@@ -185,19 +192,19 @@
                     </div>
                 </div>
             </div>
-            <div class="d-flex justify-content-center ">
+            <div class="d-flex justify-content-center mt-4">
                 <button class="btn btn-primary">See more Courses</button>
             </div>
         </section>
         <!-- ready to join section start  -->
         <section class="mt-5">
             <div class="bg-primary rounded-1 row p-5 text-center align-items-center">
-                <div class="col text-white">
+                <div class="text-white col-lg">
                     <h1>Ready to join?</h1>
                     <p>It is a long established fact that a reader will be distracted by the
                         readable content of a page when looking at its layout.</p>
                 </div>
-                <div class="col">
+                <div class="col-lg">
                     <!-- Button trigger modal -->
                     <button type="button" class="btn bg-white fs-4 fw-bold text-primary" data-bs-toggle="modal"
                         data-bs-target="#exampleModal">
@@ -312,7 +319,7 @@
             </div>
         </section>
         <!-- trusted section is start from here  -->
-        <section class="container mt-5 mb-5 .d-sm-none">
+        <section class="container mt-5 mb-5 d-none d-lg-block">
             <div>
                 <h1 class="text-center">Trusted by over 800+ companies</h1>
                 <div class=" mt-3 d-flex gap-4 align-items-center">
@@ -328,7 +335,7 @@
     </main>
 
     <!-- main section end  -->
-    <footer class="bg-dark">
+    <footer class="bg-dark mt-5 h-auto">
         <div class="d-flex justify-content-center align-items-center">
             <div class="text-white w-25 text-center">
                 <h1>Courses</h1>
